2008-12-02  Stephane Delcroix  <sdelcroix@novell.com>

	* generator/Ctor.cs:
	* generator/Method.cs:
	* generator/MethodBase.cs: refactor the Protection from Method to
	MethodBase, generate ctors with the correct proteciton too.

2008-12-01  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: automarshal TreeSelection.GetSelectedRows.
	* gtk/TreeSelection.custom: kill GetSelectedRows customization.
	[Fixes #450689]

2008-12-01  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: automarshal TreeView.Columns.
	* gtk/TreeView.custom: kill Columns customization.
	[Fixes #450685]

2008-11-28  Mike Kestner  <mkestner@novell.com>

	* generator/Signal.cs: remove ref int workaround now that we fallback
	to signal-specific marshalers for G_TYPE_POINTER using signals.
	Fixes #450119.

2008-11-26  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Image.custom:
	* gtk/Gtk.metadata: obsolete Image.FromPixbuf, FromAnimation,
	FromFile setters in favor of already existing Pixbuf, Animation and
	File.

2008-11-26  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: bump svn version.
	* cairo/Makefile.am: policy config is hard-coded, not generated.

2008-11-26  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: prepend CFLAGS environment setting to AC_SUBST.
	Patch from Diego Petteno.  [Fixes #443175]

2008-11-25  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs: fix for 'IntPtr as object' value construction.

2008-11-24  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* atk/Makefile.am:
	* atk/SelectionAdapter.custom: new method for firing selection-changed
	( http://library.gnome.org/devel/atk/stable/AtkSelection.html#AtkSelection-selection-changed )

2008-11-21  Mike Kestner  <mkestner@novell.com>

	* glib/ManagedValue.cs: rework to ref count a ManagedValue instance
	and pass a GCHandle to it around, instead of taking out multiple
	gchandles on the managed target itself.

2008-11-21  Stephane Delcroix  <sdelcroix@novell.com>
