@@ -1,3 +1,7 @@
+2008-12-08  Andrés G. Aragoneses  <aaragoneses@novell.com>
+
+	* glib/Signal.cs: Improve protection against invalid signals.
+
 2008-12-02  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* generator/Ctor.cs:
